example of clustering

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/sweettirexkiller/advanced-node#readme",
   "dependencies": {
+    "cluster": "^0.7.7",
     "express": "^4.16.3"
   }
 }
